--- a/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.css
+++ b/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.css
@@ -1,15 +1,38 @@
-.phone-generic {
-  /*margin-left: 50px;*/
+/*.phone-generic {
+  padding: 1px;
   margin-top: 10px;
   background: var(--light);
   width: 100%;
   height: 800px;
   border: 5px solid #000;
   border-radius: 15px;
-  /*margin-right: 10px;
-  margin-left: 10px;*/
-}
+}*/
 
 .tammm {
   width: 33.33333% !important;
+}
+
+.flex-center-items {
+  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+  height: 800px;
+  /*border: 5px solid #000;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  vertical-align: middle;
+}
+
+.logo-property {
+  width: 150px;
+}
+.rounded {
+
+  border-radius: 10px !important;
+}
+
+.width-80Percent {
+  width: 100%;
+}
+.shadow:hover {
+  box-shadow: 0 0 11px rgba(33,33,33,.3) !important;
 }
