--- a/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
@@ -3,51 +3,47 @@
     <h2 class="text-light">{{userService.User.email}}</h2>
   </div>
 </div>
-<!--button class="btn btn-outline-info rounded-circle backNavigation" routerLink="/backups">
-          <span>
-            <fa-icon [icon]="util.faChevronLeft"></fa-icon>
-          </span>
-</button-->
 
 <div class="row" style="margin: 0px;">
-  <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 " style="padding-left: 10px">
-    <div class="phone-generic">
-      <div class="card" *ngIf="userService.User.ios == 1" style="margin-bottom: 50px;">
-        <div class="card-header-pills text-center" >
-          <label class="card-title font-weight-bold " >IOS</label>
-        </div>
-        <div class="card-body text-center">
-          <label class="card-subtitle font-weight-light"><strong>version_ios: </strong>{{userService.User.version_ios}}</label>
-        </div>
-      </div>
-      <div class="card" *ngIf="userService.User.android_v2 == 1 || userService.User.android_v3 == 1">
-        <div class="card-header-pills text-center" >
-          <label class="card-title font-weight-bold ">ANDROID</label>
-        </div>
-        <div class="card-body text-center">
-          <label class="card-subtitle font-weight-light"><strong>device_name: </strong>{{userService.User.device_name}}</label><br>
-          <label class="card-subtitle font-weight-light"><strong>device_model: </strong>{{userService.User.device_model}}</label><br>
-          <label class="card-subtitle font-weight-light"><strong>device_os_version: </strong>{{userService.User.device_os_version}}</label><br>
-          <label class="card-subtitle font-weight-light"><strong>android_v2: </strong>{{userService.User.version_v2}}</label><br>
-          <label class="card-subtitle font-weight-light"><strong>android_v3: </strong>{{userService.User.version_v3}}</label><br>
-          <label class="card-subtitle font-weight-light"><strong>license: </strong>{{userService.User.license}}</label><br>
+  <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 " style="padding-left: 10px; padding-top: 10px;">
+    <!--div class="phone-generic flex-center-items">
 
-        </div>
+    </div-->
+
+    <div class="card flex-center-items width-80Percent shadow mb-2 p-3 bg-white rounded" *ngIf="userService.User.android_v2 == 1 || userService.User.android_v3 == 1">
+      <img src="../../../../assets/img/android.png" class="card-img-top logo-property" alt="ios">
+      <div class="card-body">
+        <h5 class="card-title font-weight-500 text-center">ANDROID</h5>
+        <p class="card-text text-center font-weight-light"><strong class="font-weight-normal">device_name: </strong>{{userService.User.device_name}}</p>
+        <p class="card-text text-center font-weight-light"><strong class="font-weight-normal">device_model: </strong>{{userService.User.device_model}}</p>
+        <p class="card-text text-center font-weight-light"><strong class="font-weight-normal">device_os_version: </strong>{{userService.User.device_os_version}}</p>
+        <p class="card-text text-center font-weight-light"><strong class="font-weight-normal">android_v2: </strong>{{userService.User.version_v2}}</p>
+        <p class="card-text text-center font-weight-light"><strong class="font-weight-normal">android_v3: </strong>{{userService.User.version_v3}}</p>
+        <p class="card-text text-center font-weight-light"><strong class="font-weight-normal">license: </strong>{{userService.User.license}}</p>
       </div>
     </div>
-
+    <div class="card flex-center-items width-80Percent shadow p-3 bg-white rounded" *ngIf="userService.User.ios == 1">
+      <img src="../../../../assets/img/ios.png" class="card-img-top logo-property" alt="ios" >
+      <div class="card-body">
+        <h5 class="card-title font-weight-500 text-center">IOS</h5>
+        <p class="card-text text-center font-weight-light"><strong class="font-weight-normal">version_ios:</strong> {{userService.User.version_ios}}</p>
+      </div>
+    </div>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9" style="width:100%; border: 1px solid #000000;margin-top: 10px; border-radius: 15px; padding: 20px;">
-    <div class="row" >
-      <div class="col text-left">
-        <h3 class="font-weight-light"><strong>Codigo País: </strong>{{userService.User.country_code}}</h3>
-      </div>
-      <div class="col text-right">
-        <h3 class="font-weight-light"><strong>Ciudad: </strong>{{userService.User.city}}</h3>
+    <div class="container mb-5 mt-5">
+      <div class="row" >
+        <div class="col text-left">
+          <h4 class="font-weight-light"><strong>Codigo País: </strong>{{userService.User.country_code}}</h4>
+        </div>
+        <div class="col text-right">
+          <h4 class="font-weight-light"><strong>Ciudad: </strong>{{userService.User.city}}</h4>
+        </div>
       </div>
     </div>
+
     <div class="row text-center" style="margin-top: 15px; margin-bottom: 15px">
-      <h3 class="font-weight-bold text-center" style="width: 100%; ">GRAFICAS</h3>
+      <h3 class="font-weight-500 text-center" style="width: 100%; ">GRAFICAS</h3>
       <ul class="nav nav-tabs nav-color" style="width: calc(100% + 10px); margin-left: -5px; margin-right: -5px">
         <li class="nav-item tam-tab tammm">
           <a class="nav-link tam-a text-light" routerLinkActive="active" [routerLink]="['gastos']">Gastos</a>
@@ -59,20 +55,22 @@
           <a class="nav-link tam-a text-light" routerLinkActive="active" [routerLink]="['gastosvsEntradas']">Gastos vs Ingresos</a>
         </li>
       </ul>
-      <router-outlet></router-outlet>
+      <div style="width: calc(100% + 10px); margin-left: -5px; margin-right: -5px; height: 100%; overflow-y: scroll; overflow-x: hidden">
+        <router-outlet></router-outlet>
+      </div>
 
     </div>
     <div class="row text-center">
       <div class="col">
         <div class="row">
-          <h3 class="font-weight-bold" style="width: 100%; ">RESPALDOS</h3>
+          <h3 class="font-weight-500" style="width: 100%; ">RESPALDOS</h3>
         </div>
         <div class="row">
           <div class="col" style="text-align: left">
-            <button class="btn btn-outline-primary" (click)="paginaBackup(['/id_backup', 1, backService.backups[0].id_backup])">Primer Respaldo<br>{{backService.backups[0].date_creation | date:'dd MMMM yyyy'}}</button>
+            <button class="btn btn-outline-primary" (click)="paginaBackup(['/detalleRespaldo', 1, backService.userBackups[backService.indexUser].backups[0].id_backup])">Primer Respaldo<br>{{backService.userBackups[backService.indexUser].backups[0].date_creation | date:'dd MMMM yyyy'}}</button>
           </div>
-          <div class="col" style="text-align: right" *ngIf="backService.backups.length > 0">
-            <button class="btn btn-outline-secondary" (click)="paginaBackup(['/id_backup', backService.backups.length, backService.backups[backService.backups.length - 1].id_backup])">Ultimo Respaldo<br>{{backService.backups[backService.backups.length - 1].date_creation | date:'dd MMMM yyyy'}}</button>
+          <div class="col" style="text-align: right" *ngIf="backService.userBackups[backService.indexUser].backups.length > 0">
+            <button class="btn btn-outline-secondary" (click)="paginaBackup(['/detalleRespaldo', backService.userBackups[backService.indexUser].backups.length, backService.userBackups[backService.indexUser].backups[backService.userBackups[backService.indexUser].backups.length - 1].id_backup])">Ultimo Respaldo<br>{{backService.userBackups[backService.indexUser].backups[backService.userBackups[backService.indexUser].backups.length - 1].date_creation | date:'dd MMMM yyyy'}}</button>
           </div>
         </div>
       </div>
