--- a/src/app/Paginas/Body/detalle-usuario/gastos/gastos.component.css
+++ b/src/app/Paginas/Body/detalle-usuario/gastos/gastos.component.css
@@ -1,13 +1,21 @@
 .categoria {
   /* width: 40px;*/
   width: 100%;
-  height: 20px;
+  height: 15px;
   background-color: #0052ff;
   border: 1px solid #1b0d37;
-  margin-right: 5px;
-  margin-top: 5px;
+  border-radius: 2px;
 }
 .cajaCategoria {
   margin-bottom: -5px;
   vertical-align: middle;
+}
+
+.tr-color-cat {
+  width: 30px;
+  padding: 2px;
+  height: 0px;
+}
+.table-fixed tbody{
+  height: 300px !important;
 }
