--- a/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.css
+++ b/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.css
@@ -36,3 +36,11 @@
 .shadow:hover {
   box-shadow: 0 0 11px rgba(33,33,33,.3) !important;
 }
+.membrete-logo {
+  position: fixed;
+  z-index: -1;
+  /* height: 1px; */
+  top: 1px;
+}
+
+
