--- a/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
@@ -4,6 +4,10 @@
   </div>
 </div>
 
+<div class="container membrete-logo" >
+  <img src="assets/img/logoEMX.png" id="logoEncodeMX">
+</div>
+
 <div class="row" style="margin: 0px;">
   <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 " style="padding-left: 10px; padding-top: 10px;">
     <!--div class="phone-generic flex-center-items">
@@ -30,38 +34,41 @@
       </div>
     </div>
   </div>
-  <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9" style="heigth: 100%; width:100%;margin-top: 10px; border-radius: 15px; padding: 20px;" id="dataUserExport">
-      <div class="container mb-5 mt-5">
-        <div class="row mb-3" >
-          <h4 class="font-weight-light text-center" style="width: 100%;"><strong>Usuario: </strong>{{userService.User.email}}</h4>
+  <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 shadow" style="heigth: 100%; width:100%;margin-top: 10px; border-radius: 15px; padding: 20px; margin-left: -10px" >
+      <div id="dataUserExport">
+        <div class="container mb-5 mt-5">
+          <!--div class="row mb-3" >
+            <h4 class="font-weight-light text-center" style="width: 100%;"><strong>Usuario: </strong>{{userService.User.email}}</h4>
+          </div-->
+          <div class="row" >
+            <div class="col text-left">
+              <h4 class="font-weight-light"><strong>Codigo País: </strong>{{userService.User.country_code}}</h4>
+            </div>
+            <div class="col text-right">
+              <h4 class="font-weight-light"><strong>Ciudad: </strong>{{userService.User.city}}</h4>
+            </div>
+          </div>
         </div>
-        <div class="row" >
-          <div class="col text-left">
-            <h4 class="font-weight-light"><strong>Codigo País: </strong>{{userService.User.country_code}}</h4>
-          </div>
-          <div class="col text-right">
-            <h4 class="font-weight-light"><strong>Ciudad: </strong>{{userService.User.city}}</h4>
-          </div>
+
+        <div class="row text-center" style="margin-top: 15px; margin-bottom: 15px">
+          <h3 class="font-weight-500 text-center" style="width: 100%; ">GRAFICAS</h3>
+          <ul class="nav nav-tabs nav-color" style="width: calc(100% + 10px); margin-left: -5px; margin-right: -5px">
+            <li class="nav-item tam-tab tammm">
+              <a class="nav-link tam-a text-light" routerLinkActive="active" [routerLink]="['gastos']">Gastos</a>
+            </li>
+            <li class="nav-item tam-tab tammm">
+              <a class="nav-link tam-a text-light" routerLinkActive="active" [routerLink]="['entradas']">Ingresos</a>
+            </li>
+            <li class="nav-item tam-tab tammm">
+              <a class="nav-link tam-a text-light" routerLinkActive="active" [routerLink]="['gastosvsEntradas']">Gastos vs Ingresos</a>
+            </li>
+          </ul>
+          <router-outlet></router-outlet>
+
         </div>
       </div>
 
-      <div class="row text-center" style="margin-top: 15px; margin-bottom: 15px">
-        <h3 class="font-weight-500 text-center" style="width: 100%; ">GRAFICAS</h3>
-        <ul class="nav nav-tabs nav-color" style="width: calc(100% + 10px); margin-left: -5px; margin-right: -5px">
-          <li class="nav-item tam-tab tammm">
-            <a class="nav-link tam-a text-light" routerLinkActive="active" [routerLink]="['gastos']">Gastos</a>
-          </li>
-          <li class="nav-item tam-tab tammm">
-            <a class="nav-link tam-a text-light" routerLinkActive="active" [routerLink]="['entradas']">Ingresos</a>
-          </li>
-          <li class="nav-item tam-tab tammm">
-            <a class="nav-link tam-a text-light" routerLinkActive="active" [routerLink]="['gastosvsEntradas']">Gastos vs Ingresos</a>
-          </li>
-        </ul>
-        <router-outlet></router-outlet>
-
-      </div>
-      <div class="row text-center">
+      <div class="row text-center " style="margin-top: 100px;">
         <div class="col">
           <div class="row">
             <h3 class="font-weight-500" style="width: 100%; ">RESPALDOS</h3>
