--- a/src/app/Paginas/Body/detalle-usuario/gastos/gastos.component.css
+++ b/src/app/Paginas/Body/detalle-usuario/gastos/gastos.component.css
@@ -1,21 +1,18 @@
 .categoria {
-  /* width: 40px;*/
-  width: 100%;
-  height: 15px;
+  width: 100%!important;
+  height: 15px!important;
   background-color: #0052ff;
   border: 1px solid #1b0d37;
   border-radius: 2px;
 }
-.cajaCategoria {
-  margin-bottom: -5px;
-  vertical-align: middle;
+@media screen and (max-width: 1920px) and (max-height: 1080px) {
+  .table-fixed tbody{
+    height: 600px !important;
+  }
 }
-
-.tr-color-cat {
-  width: 30px;
-  padding: 2px;
-  height: 0px;
-}
-.table-fixed tbody{
-  height: 300px !important;
+@media screen and (max-width: 1366px) and (max-height: 768px) {
+  .table-fixed tbody{
+    height:
+      380px !important;
+  }
 }
