Correcciones Bugs gral

--- a/src/app/Paginas/Body/backup/backup.component.html
+++ b/src/app/Paginas/Body/backup/backup.component.html
@@ -1,7 +1,7 @@
 
 <div class="tamaño-titulo-encabezado">
   <div class="tam-titulo-encabezado">
-    <h2 class="text-light">Detalles Respaldo # {{numBack}} Backup {{idBack}}</h2>
+    <h2 class="text-light">Detalles Respaldo # {{numBack}} Id_Backup {{idBack}}</h2>
     <h4 class="text-light"><a [routerLink]="['/detalleUsuario']" class="text-light" style="text-decoration: none;">{{userService.User.email}}</a> </h4>
   </div>
 </div>
