--- a/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
+++ b/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
@@ -126,7 +126,7 @@
       <div class="form-row">
         <div class="form-group col-4">
           <label for="rangoUsers" class="col-form-label" style="font-size: 18px; font-weight: normal">Núm. Usuarios a limpiar:</label>
-          <input type="number" value="10" class="form-control"pattern="^[0-9]+" min="1" [(ngModel)]="rangoUsers.value" id="rangoUsers" name="rangoUsers" (keyup)="keyUpEventRangoUsers($event)" (blur)="afterBlurRangoUsers($event)" (focus)="beforeBlurRangoUsers($event)">
+          <input type="number" value="10" class="form-control"pattern="^[0-9]+" min="1" [(ngModel)]="rangoUsers.value" id="rangoUsers" name="rangoUsers" (keyup)="keyUpEventRangoUsers($event)" (blur)="afterBlurRangoUsers()" (focus)="beforeBlurRangoUsers()">
         </div>
         <div class="form-group col-4">
           <label for="rangoBackups" class="col-form-label" style="font-size: 18px; font-weight: normal">Backups mayores a:</label>
@@ -154,7 +154,7 @@
 <div id="accordion" style="padding-left: 50px;padding-right: 50px" *ngIf="backupService.userBackups.length > 0">
   <div   class="card" *ngFor="let user of backupService.userBackups; let i = index">
     <div class="card-header" [id] = "i" [ngClass]="(user.checked) ? 'HeaderSelected' : 'HeaderNoSelected'">
-      <div class="float-left" style="width: 90% !important; padding: 10px" (click)="eventSelectCollapse(i)">
+      <div class="float-left" style="width: 90% !important; padding: 10px" (dblclick)="eventSelectCollapse(i)">
         <div class="row">
           <div class="col-8">
             <div class="row">
@@ -162,7 +162,7 @@
                 <h5 class="font-weight-bold">Usuario: </h5>
               </div>
               <div class="col-10">
-                <h5 class="font-weight-light"> {{user.email}}</h5>
+                <h5 class="font-weight-light" style="cursor: pointer" (click)="detalleUsuario(i)"> {{user.email}}</h5>
               </div>
             </div>
           </div>
@@ -258,7 +258,7 @@
           <tbody *ngIf="!backupService.isFilter(i)">
           <tr class="text-center"  *ngFor="let back of user.backups; let pos = index">
             <td scope="row" class="v-a-middle font-weight-bold width-sm">{{ pos + 1 }}</td>
-            <td scope="row" class="v-a-middle width-sm">{{ back.id_backup }}</td>
+            <td scope="row" class="v-a-middle width-sm" style="cursor: pointer;" [routerLink]="['/detalleRespaldo', (pos + 1), back.id_backup]">{{ back.id_backup }}</td>
             <td scope="row" class="v-a-middle width-sm">{{ back.automatic }}</td>
             <td scope="row" class="v-a-middle width-lg">{{ (back.date_creation == '0000-00-00 00:00:00') ? '0000-00-00 00:00:00': back.date_creation | date:'dd MMMM yyyy hh:mm:ss' }}</td>
             <td scope="row" class="v-a-middle width-lg">{{ (back.date_download == '0000-00-00 00:00:00') ? '0000-00-00 00:00:00': back.date_download | date:'dd MMMM yyyy hh:mm:ss' }}</td>
