--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
@@ -6,6 +6,36 @@
 >
   <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
+
+
+<!-- ------------------------------------------------------------------------------------------------------ -->
+<div class="modal fade" id="modalConfirmInconsistencia" tabindex="-1" role="dialog" aria-labelledby="modalConfirmInconsistenciaTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title centerTitleModal" id="modalConfirmInconsistenciaTitle">Corregir Inconsistencia</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+            <div class="row titulo-Modal">
+              <h5 class="text-center font-weight-500">¿ Desea corregir las inconsistencias de la Tabla : {{nameTable}} ?</h5>
+            </div>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal" >Cerrar</button>
+        <button type="button" class="btn btn-success" (click)="operacion()">Corregir</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ------------------------------------------------------------------------------------------------------ -->
+
+
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
     <div class="modal-content">
